# aoc-2022

./: .gitignore  CMakeLists.txt  readme.md
1/: 1_problem.txt  main.c.20221201
10/: main.c
11/: main.c
12/: main.c
13/: main.py
14/: main.py
15/: main.py  out.txt
2/: main.c
3/: main.c
4/: main.c
5/: main.c
6/: main.c
7/: main.c
8/: main.c
9/: main.c
common/: coord.h  heightmap.h  stuff.h  tree.h  vec.h
